move site to subfolder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Desktop Toast ANE : Adobe Air Native Extension for displaying adaptive and interactive toast notifications in Windows 10 ">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="site/stylesheets/stylesheet.css">
 
     <title>Desktop Toast ANE</title>
   </head>
